src/objects/Int_Agreement_Payment_Schedule__c.object
<CustomObject>
    <description>Int Agreement Payment Schedule</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Payment Schedule</relationshipLabel>
        <relationshipName>Int_Agreements_Payment_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Code__c</fullName>
        <description>Payment Type Code</description>
        <label>Payment Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Amount__c</fullName>
        <description>Schedule Amount</description>
        <label>Schedule Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Class__c</fullName>
        <description>Schedule Class</description>
        <label>Schedule Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date__c</fullName>
        <description>Schedule Start Date</description>
        <label>Schedule Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Int Agreement Payment Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Payment_Type_Code__c</columns>
        <columns>Schedule_Amount__c</columns>
        <columns>Schedule_Class__c</columns>
        <columns>Currency_Code__c</columns>
        <columns>Agreement_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APS-{0000000000}</displayFormat>
        <label>Agreement Payment Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Payment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>